# tools

./: docker-compose.dev.yml
management/: Dockerfile  __init__.py  pyproject.toml
management/ai_tool_recommender/: __init__.py  admin.py  apps.py  conversational_service.py  internet_tool_submitter.py  models.py  query_refinement_service.py  questionnaire_service.py  serializers.py  tests.py  urls.py  views.py  workflow_generation_service.py
management/ai_tool_recommender/agents/: __init__.py  agent_router.py  base_agent.py  general_assistant.py  implementation_chat.py  query_decomposer_agent.py  refine_query_agent.py  tool_assistant.py  tool_selector_agent.py  workflow_builder_agent.py
management/ai_tool_recommender/ai_agents/: __init__.py  excel_handler.py  explain_tool_service.py
management/ai_tool_recommender/migrations/: 0001_initial.py  0002_toolcomparison.py  0003_conversationsession_chatmessage_refinequerysession_and_more.py  0004_conversationsession_refined_query.py  0005_add_questionnaire_fields.py  0006_refinedquery.py  0007_workflowimplementationguide.py  0008_add_agent_tracking_to_chat_messages.py
management/ai_tool_recommender/services/: __init__.py  intelligent_query_generator.py  intelligent_search_service.py  parallel_tool_search_service.py  refined_query_tool_selector.py  sequential_workflow_generator.py  workflow_implementation_service.py
management/ai_tool_recommender/utils/: __init__.py  embeddings.py  search_quota.py
management/authentication/: __init__.py  admin.py  apps.py  authentication.py  backends.py  models.py  pdf_processing_agent.py  serializers.py  tests.py  urls.py  views.py
management/authentication/change_password/: serializers.py
management/authentication/email_verification/: __init__.py  models.py  serializers.py
management/chat/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/chat/migrations/: 0001_initial.py  (+3 more)
management/configurations/: __init__.py  asgi.py  celery.py  pagination.py  permissions.py  settings.py  urls.py  utils.py  views.py  wsgi.py
management/consultant_recommender/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/contractor/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/email_teamplates/: earlyaccess_paymentlink.py  email_verification_success.py  email_verification_template.py  password_change_successfully.py  password_reset.py  password_reset_successfull.py  set_password.py  success_emaill_verification_earlyaccess.py
management/email_templates/: meeting_booking_template.py
management/forms/: __init__.py
management/guest_user/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/onboarding_questions/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/prompt_optimization/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/scripts/: startup.sh
management/search/: __init__.py  admin.py  apps.py  decorators.py  models.py  serializers.py  urls.py  views.py
management/subscription/: README_REWARDFUL.md  __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
management/tool_scraping/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
management/tools/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
management/workflow/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  transform_data.py  urls.py  views.py
microservices/ai_tool_recommender/: AI_TOOL_RECOMMENDER_ARCHITECTURE.md  Dockerfile.dev  Dockerfile.staging  README.md  main.py  pyproject.toml
microservices/consultant_recommender/: Dockerfile.dev  Dockerfile.staging  README.md  config.py  main.py  pyproject.toml
(+182 files in other folders)
