[tool.poetry]
name = "ai-tool-recommender"
version = "0.1.0"
description = "AI Tool Recommender Microservice"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
numpy = "^1.26.3"
langchain-openai = "^0.0.5"
langchain-core = "^0.1.17"
openai = "^1.10.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pinecone-client = "^3.2.2"
lancedb = "^0.5.0"
python-dotenv = "^1.0.0"
pandas = "^2.2.0"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
beautifulsoup4 = "^4.14.2"
tavily-python = "^0.7.12"
aiohttp = "^3.12.15"
redis = "^6.4.0"
psutil = "^7.1.0"
memory-profiler = "^0.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
