[tool.poetry]
name = "consultant-recommender"
version = "0.1.0"
description = "Consultant Recommender Microservice"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
numpy = "^1.26.3"
langchain-openai = "^0.0.5"
langchain-core = "^0.1.17"
openai = "^1.10.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pinecone-client = "^3.0.0"
python-dotenv = "^1.0.0"
pyarrow = "^19.0.1"
pandas = "^2.2.3"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
